--- a/styles.css
+++ b/styles.css
@@ -9,14 +9,13 @@ body {
 header {
     width: 850px;
     height: 450px;
-    background-image: url(https://i.ibb.co/7GkYwVY/isaac-sloman-d-LVV1-Fy-JLdk-unsplash.jpg);
-   width: auto;  
-   font-size: 30px;
-   font-weight: 900;
-   color: #EBEBEB;
-   display: flex;
-   align-items: center;
-   justify-content: center;
+    background-image: url(https://i.ibb.co/7GkYwVY/isaac-sloman-d-LVV1-Fy-JLdk-unsplash.jpg);  
+    font-size: 60px;
+    font-weight: 800;
+    color: #EBEBEB;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 h2 {
@@ -25,15 +24,15 @@ h2 {
 }
 
 p {
-    font-weight: lighter;
-    color: #101010;
+    font-weight: normal;
+    color: #000000;
 }
 
 main {
     height: 324px;
     background-color: #EBEBEB;
     justify-content: space-between;
-    margin-top: 20px;
+    margin-top: 16px;
     display: flex;
 }
 
