--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
 header {
     width: 850px;
     height: 450px;
-    background-image: url(https://i.ibb.co/7GkYwVY/isaac-sloman-d-LVV1-Fy-JLdk-unsplash.jpg);  
+    background-image: url(galaxy.jpg); 
     font-size: 60px;
     font-weight: 800;
     color: #EBEBEB;
