--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,8 @@ body {
 
 header {
     width: 850px;
-    height: 450px;
-    background-image: url(galaxy.jpg); 
+    background-image: url(galaxy.jpg);
+    background-size: cover; 
     font-size: 60px;
     font-weight: 800;
     color: #EBEBEB;
